# data-platform-exercise

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
cloud_run_service/main/: Dockerfile  app.py  client.py  exceptions.py  logger.py  processor.py  requirements.txt  tools.py
dataflow/: metadata.json  pipeline.py  requirements.txt  setup.py
dataflow/custom/: io_operations.py
emulators/: .firebaserc  firebase.json
functions/processor/: configs.py  constants.py  main.py  requirements.txt  tools.py
local/populator/: .env  dataflow_counters.json  dataflow_transactions.json  dataflow_users.json  end_to_end_initializer.py  firestore_initializer.py  raw_transaction_publisher.py  raw_transactions.json  test_4_raw_transactions.json  users.json
terraform/db/: firestore.tf  local.tf
terraform/flow/: bucket.tf  cloud_function.tf  cloud_run.tf  local.tf  provider.tf  pub_sub.tf  workflow.tf
tests/: conftest.py  test_integration_dataflow.py  test_units_card_order_fee_calculator.py  test_units_fee_calculator.py  test_units_transaction_operations.py
workflow/: workflow.yaml
