[tool.poetry]
name = "data-platform-exercise"
version = "0.1.0"
description = ""
authors = ["Minh DOAN"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
functions-framework = "^3.8.1"
firebase-admin = "^6.5.0"
python-dotenv = "^1.0.1"
google-api-python-client = "^2.143.0"
mock-firestore = "^0.11.0"
firebase-functions = "^0.4.2"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.cloud_functions.dependencies]
google-cloud-pubsub = "^2.23.0"
google-cloud-firestore = "^2.18.0"
google-cloud-logging = "^3.11.2"


[tool.poetry.group.dataflow.dependencies]
apache-beam = {version = "^2.58.1", extras = ["gcp"]}


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
black = "^24.8.0"
pytest = "^8.3.2"
pytest-order = "^1.3.0"
pyhamcrest = "^2.1.0"
gcp-storage-emulator = "^2024.8.3"
faker = "^28.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
